cleanup and fixes

--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "prebuild": "rimraf ./dist",
     "build": "tsc -p tsconfig.build.json",
-    "deploy": "npm i && npm run prebuild && npm run build && npm prune --production && zip -r ./lambda.zip dist/ node_modules",
+    "deploy": "sls deploy --config serverless.yml",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nodemon --watch 'src/**/*.ts' --ignore 'src/**/*.spec.ts' --exec 'ts-node' src/app.ts",
-    "start:sls": "sls offline start --httpPort 4011 --lambdaPort 4012",
+    "start:sls": "sls offline start --httpPort 3041 --lambdaPort 3042",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
@@ -33,6 +33,8 @@
     "rimraf": "^3.0.2",
     "serverless-dynamodb-local": "^0.2.39",
     "serverless-offline": "^6.8.0",
+    "serverless-plugin-optimize": "^4.1.4-rc.1",
+    "serverless-plugin-warmup": "^4.9.0",
     "serverless-webpack": "^5.3.5",
     "source-map-support": "^0.5.19",
     "supertest": "^5.0.0",
